--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.drivingbuddy'
+    namespace 'com.drivingbuddy'
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.drivingbuddy"
+        applicationId "com.drivingbuddy"
         minSdk 24
         targetSdk 35
         versionCode 1
@@ -29,11 +29,12 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.navigation.fragment
+    implementation libs.navigation.ui
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
