--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.webkit:webkit:1.8.0"
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
