--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "firebase-admin": "^13.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.1"
+    "mongoose": "^7.6.1",
+    "multer": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
